<resources>
    <string name="app_name">MoTv Catalogue</string>
    <string name="img_poster_contentdesc">Describe an image poster of a movies or tv</string>
    <string name="button_search_contentdesc">Button Search</string>
    <string name="search_hint">Look for something…</string>
    <string name="btn_menu_more">Menu More</string>
    <string name="nav_popular">Popular</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_tv_airing_today">Airing Today</string>
    <string name="nav_tv_ota">Over The Air</string>
    <string name="nav_now_playing">Now Playing</string>
    <string name="nav_top_rated">Top Rated</string>
    <string name="nav_upcoming">Upcoming</string>
    <string name="error_picture">Error picture</string>
    <string name="movie_title">Movies</string>
    <string name="tv_title">Tv Shows</string>
    <string name="on_network_failed">Network Failed!</string>
    <string name="msg_on_net_error">Please ensure your phone to be connected to the internet and try to refresh page
        again
    </string>
    <string name="on_no_network">No Network Available!</string>
    <string name="msg_on_no_network">Connect to a network and refresh the page again</string>
    <string name="on_parse_failed">Parse Failed!</string>
    <string name="err_suspected">Suspected Error!</string>


    <string name="err_msg_unspecified_default">Refresh page (click refresh or swipe down) or if this problem is occurred
        again, you can tell
        the developer
    </string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Iam marked this string is not translatable because is not part of Activity Runtime -->
    <string name="overview_test" translatable="false">
        "As the Avengers and their allies have continued to protect the world from threats too large for any one hero to
        handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is
        to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on
        all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and
        existence itself has never been more uncertain."
    </string>
    <string name="original_title">Original Title</string>
    <string name="original_language">Original Language</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="runtime">Runtime</string>
    <string name="status">Status</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="homepage">Homepage</string>
    <string name="tagline">Tag line</string>
    <string name="type">Type</string>
    <string name="first_air_date">First Air Date</string>
    <string name="last_air_date">Last Air Date</string>
    <string name="in_production">In Production</string>
    <string name="origin_country">Origin Country</string>
    <string name="number_of_episodes">Number Of Episodes</string>
    <string name="number_of_seasons">Number Of Seasons</string>
    <string name="true_text">Yes</string>
    <string name="false_text">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="crews">Crews</string>
    <string name="casts">Casts</string>
    <string name="overview">Overview</string>
    <string name="created_by">Created By</string>
    <string name="abouts">Abouts</string>
    <string name="reviews">Reviews</string>
    <string name="header_bg_contentdesc">Image Header background</string>
    <string name="go_back_page_contentdesc">Go back to previous page</string>
    <string name="people_avatars_contentdesc">People Avatars</string>
    <string name="launch_contentdec">Launch into specified links web page</string>
    <string name="list_mode_contentdesc">List Content Mode</string>
    <string name="detail_film_title">Detail Film</string>
    <string name="detail_tv_title">Detail Tv Shows</string>
    <string name="err_internet_unactivated">Your mobile data or wifi is not activated</string>
    <string name="err_parse_suggestions">Refresh and if the problem is show again, report or wait until the app is
        updated
    </string>
    <string name="err_not_found">Not Found!</string>
    <string name="err_not_found_message">Error when get data, the resources cannot be found or missing</string>
    <string name="err_not_found_suggest">Try to move into other pages and see\'s that they can be displayed</string>
    <string name="caused_by">Caused by : %1$s</string>
    <string name="net_failed_error">Bad Signal or you have sign in data cellular or Wi-Fi that blocked from internet
    </string>
    <string name="suggestion">Suggestions</string>
    <string name="no_data">No data available for this section</string>
    <string name="close">Close</string>
    <string name="message_popup">You must click close if you want to do other things</string>
    <string name="json_parser_error">JSON Parser Error!</string>
    <string name="go_back">Go Back</string>
    <string name="refresh">Refresh</string>
    <string name="open_links">Open Links</string>
    <string name="opento_message">Are you sure to open this page?</string>
    <string name="en_di_tint">Enable / disable tinting of background image</string>
    <string name="img_tint_mode_overlay_tag">Show the background image (Tint Mode Overlay)</string>
    <string name="img_tint_mode_darken_tag">Set to Dark of the background image (Tint Mode Darken)</string>
    <string name="item_favorite_contentdesc">Add / Remove this item from favorites</string>
    <string name="favorite_title">Favorites</string>

    <string name="setting">App Settings</string>
    <string name="stay">Stay</string>
    <string name="loading">Loading Data…%1$d%%</string>
    <string name="add_fav">Added Into Favorite</string>
    <string name="remove_fav">Removed from favorites</string>
    <string name="time_picker_allow_24">Use 24 hour format</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>

    <string-array name="daily_reminder_notiftitle">
        <item>Let\'s Go back into MoTvCatalogue!</item>
        <item>Daily Reminder</item>
        <item>It seems any new Film/Tv Shows</item>
    </string-array>
    <string-array name="daily_reminder_notifcontent">
        <item>Don\'t lost any updates, lets go back!</item>
        <item>Remind you to go to application</item>
        <item>Come on and find out any update availables</item>
    </string-array>
    <string name="err_text">No Favorite Added</string>
    <string name="err_no_results">No Results</string>
    <string name="err_no_results_suggest">Refresh, submit or change the right query</string>
    <string name="detail_favorites_title">Detail Favorites</string>
    <string name="daily_reminder_intent_message">Thanks for going back into this application!\\nHopefully you have great
        experience :)
    </string>
    <string name="alert">Alert</string>
    <string name="appwidget_invalid_id_message">The App Widget Id is invalid! Please input the right value!</string>
    <string name="okay">Okay</string>
    <string name="appwidget_not_right_value">Please select the right value before exit!</string>
    <string name="searching">Searching…</string>
    <string name="wait_until_search_finished">Please Wait until search finished :)</string>
    <string name="fav_tv_shows">My Favorite Tv Shows</string>
    <string name="fav_movies_widget">My Favorite Movies</string>
    <string name="whatever">Whatever :(</string>
    <string name="find_out">Let\'s find out what of that!</string>
    <string name="reminder_onmain"> If you want to use Page Indicator, refresh the page then click Toggle Page Indicator on the menu</string>
    <string name="using_page_indicator_ex_search">Please exit search mode by clicking left arrow (toolbar) to enable Toggle Page Indicator</string>
    <string name="toggle_page_indicator">Toggle Page Indicator</string>
    <string name="explanation_toast_widget">The title is %1$s at position %2$d and have id %3$d, if you want to more details, please click launch button on side bottom right of element.</string>
    <string name="applying_reminder">Applied Alarm Configuration to %1$d Pending Alarms successfully</string>
    <string name="stackprev_radio_fav_movie">Favorite Movie</string>
    <string name="stackprev_radio_fav_tvshows">Favorite Tv Shows</string>
    <string name="stackprev_title">Selects the content of favorite that should to be shown as widget</string>
</resources>
