<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/now_playing"
            android:icon="@drawable/ic_now_playing_black_24dp"
            android:title="@string/nav_now_playing" />
    <item
            android:id="@+id/popular"
            android:icon="@drawable/ic_popular_black_24dp"
            android:title="@string/nav_popular" />
    <item
            android:id="@+id/discover"
            android:icon="@drawable/ic_discover_black_24dp"
            android:title="@string/nav_discover" />
    <item
            android:id="@+id/top_rated"
            android:icon="@drawable/ic_toprated_black_24dp"
            android:title="@string/nav_top_rated" />
    <item
            android:id="@+id/upcoming"
            android:icon="@drawable/ic_upcoming_black_24dp"
            android:title="@string/nav_upcoming" />
</menu>