<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".activities.StackWidgetPreferenceActivity">

    <RadioGroup
            android:id="@+id/radioGroup_content_types"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/select_content_display_type_text"
            app:layout_constraintStart_toStartOf="@+id/select_content_display_type_text"
            app:layout_constraintTop_toBottomOf="@+id/select_content_display_type_text">

        <RadioButton
                android:id="@+id/radio_favorite_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stackprev_radio_fav_movie" />

        <RadioButton
                android:id="@+id/radio_favorite_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stackprev_radio_fav_tvshows" />
    </RadioGroup>

    <TextView
            android:id="@+id/select_content_display_type_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/stackprev_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/btn_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/okay"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup_content_types"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup_content_types" />
</androidx.constraintlayout.widget.ConstraintLayout>