<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/det_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layoutDescription="@xml/actdetail_motion_scene">

    <!-- Headers -->
    <ImageView
            android:id="@+id/actdetail_image_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actdetail_header_height"
            android:background="@color/image_header"
            android:contentDescription="@string/header_bg_contentdesc"
            android:scaleType="fitXY"
            android:tint="@color/image_header"
            android:tintMode="screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/item_poster_image"
            style="@style/ImagePosterStyle"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/img_poster_contentdesc"
            app:layout_constraintBottom_toBottomOf="@+id/actdetail_image_header"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/item_list_text_title"
            style="@style/ItemListTextViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="28dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/item_list_ratingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_poster_image"
            tools:text="Aquaman" />

    <RatingBar
            android:id="@+id/item_list_ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"

            android:isIndicator="true"
            android:theme="@style/AppTheme"
            app:layout_constraintBottom_toTopOf="@+id/avail_socmed"
            app:layout_constraintStart_toEndOf="@+id/item_poster_image"
            tools:rating="4.3" />

    <TextView
            android:id="@+id/item_list_votecount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/item_list_ratingBar"
            app:layout_constraintStart_toEndOf="@+id/item_list_ratingBar"
            app:layout_constraintTop_toTopOf="@+id/item_list_ratingBar"
            tools:text="(4553)" />

    <id.apwdevs.app.catalogue.plugin.view.WrappedView
            android:id="@+id/avail_socmed"
            android:layout_width="0dp"
            android:layout_height="@dimen/socmed_icon_wh"
            android:theme="@style/Theme.AppCompat.NoActionBar"
            app:layout_constraintBottom_toBottomOf="@+id/item_poster_image"
            app:layout_constraintEnd_toEndOf="@+id/item_list_text_title"
            app:layout_constraintStart_toStartOf="@+id/item_list_ratingBar" />

    <ImageView
            android:id="@android:id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/go_back_page_contentdesc"
            android:padding="16dp"
            android:tint="?android:attr/textColorPrimaryInverse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/actdetail_image_header"
            app:srcCompat="@drawable/abc_ic_ab_back_material"
            tools:ignore="PrivateResource" />
    <!-- -->

    <!-- its all content -->
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actdetail_recycler_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actdetail_image_header"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/actdetail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:attr/textColorPrimaryInverse"
            app:layout_constraintBottom_toBottomOf="@android:id/home"
            app:layout_constraintEnd_toStartOf="@+id/actdetail_tint"
            app:layout_constraintStart_toEndOf="@android:id/home"
            app:layout_constraintTop_toTopOf="@android:id/home"
            tools:text="TextView" />

    <ImageView
            android:id="@+id/actdetail_tint"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/en_di_tint"
            android:padding="16dp"
            android:tint="?android:attr/textColorPrimaryInverse"
            app:layout_constraintBottom_toBottomOf="@android:id/home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@android:id/home"
            app:srcCompat="@drawable/ic_tint_overlay_off_24dp" />

    <ImageView
            android:id="@+id/actdetail_favorite_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/circle_favorite"
            android:contentDescription="@string/item_favorite_contentdesc"
            app:layout_constraintBottom_toBottomOf="@+id/actdetail_favorite"
            app:layout_constraintEnd_toEndOf="@+id/actdetail_favorite"
            app:layout_constraintStart_toStartOf="@+id/actdetail_favorite"
            app:layout_constraintTop_toTopOf="@+id/actdetail_favorite" />

    <!-- disable background... because this is background holder for favorite -->
    <ImageView
            android:id="@+id/actdetail_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@android:color/transparent"
            android:padding="16dp"
            android:tint="?android:attr/textColorPrimaryInverse"
            app:layout_constraintBottom_toBottomOf="@+id/actdetail_image_header"
            app:layout_constraintEnd_toEndOf="@+id/avail_socmed"
            app:layout_constraintTop_toTopOf="@+id/actdetail_image_header"
            app:layout_constraintVertical_bias="1.2"
            app:srcCompat="@drawable/ic_favorite_border_24dp"
            tools:ignore="ContentDescription" />
</androidx.constraintlayout.motion.widget.MotionLayout>